stretch ui fix

--- a/css/brand.styl
+++ b/css/brand.styl
@@ -11,7 +11,6 @@ header
   height 50px
   padding 10px 5.25%
   font-size 16px
-  opacity 0.8
   
   img
     height 30px
