--- a/css/image.styl
+++ b/css/image.styl
@@ -12,7 +12,7 @@
     float left
     width 24px
     
-    input[name="cursor"]
+    input[name="cursor"], input[name="colormap"]
       display none
       
       &:checked + label
@@ -25,6 +25,10 @@
       height 24px
       background-color $gray1
       cursor pointer
+      box-sizing border-box
+      
+      &:hover
+        border-left 3px solid orange
     
   .viewport
     float left
@@ -48,6 +52,10 @@
       height 24px
       background-color $gray1
       cursor pointer
+      box-sizing border-box
+      
+      &:hover
+        border-left 3px solid orange
 
 .tools
   overflow hidden
