--- a/css/plots.styl
+++ b/css/plots.styl
@@ -50,7 +50,8 @@
     height 80%
 
     text
-      font-family 'Open Sans', sans-serif
+      font-family 'Helvetica Neue', 'Helvetica', sans-serif
+      font-weight 200
       font-size 11px
       
     text.label
